--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 # The .gitignore is where you name files that you don't want git to 
 # (i.e you don't want it to show up on your github)
 .vscode/
+build/
